[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BACteria"
version = "0.1.0"
description = "A simple discovery and pentest tool for BACnet services"
authors = [
    { name = "Visergon" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "websockets",
    "aiofiles",
    "colorama"
]


classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.scripts]
bacteria = "cli:main"
bacteria-cli = "cli:main"



[tool.setuptools.packages.find]
where = ["."]
include = ["bacnet*", "modules*"]
exclude = ["rsc*", "cert*"]

[tool.setuptools]
py-modules = ["cli", "utils", "inputs", "decoded_value"]

include-package-data = true


[tool.setuptools.data-files]
"share/BACteria/rsc" = ["rsc/**/*"]
"share/BACteria/cert" = ["cert/**/*"]